--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,15 +1,37 @@
-<!DOCTYPE html> 
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="/public/assets/css/burger_style.css" type="text/css"/>
-        <title>Eat the Burger!</title>
-        <script src="https://code.jquery.com/jquery.js"></script>
-        <script src="/public/assets/js/burger.js"</script>
-    </head>
+<h2>Burgers You Love!</h2><br>
 
-    
-<body> {{{ body }}}
 
-    </body>
-</html>
+<ul>
+    {{#each burgers}}
+    {{#unless devoured}}
+    {{> burgers/burger-block}}
+    {{/unless}}
+    {{/each}}
+</ul>
+
+<h2>Devoured Burgers</h2>
+
+<div class="col">
+<table class="burgerD">
+    {{#each burgers}}
+    {{#if devoured}}
+    {{> burgers/burger-devour-block}}
+    {{/if}}
+    {{/each}}
+    </table>
+</div>
+
+
+<h4>Add a burger you want to eat and click the "Submit" button</h4> 
+<form class="create-form">
+
+    <div class="new-burger">
+        <input type="text" id="burger">
+    </div>
+    <button type="submit">Submit</button>
+
+    <div class="eat-burger">
+        <input type="button" id="devour"><label>Devour It!</label>
+
+    </div>
+</form>
