--- a/views/partials/burgers/burger-devour-block.handlebars
+++ b/views/partials/burgers/burger-devour-block.handlebars
@@ -3,6 +3,6 @@
         {{id}}.{{burger_name}}
     </td>
 </tr>
-<button class="Devour" data-id="{{id}}" >
+<!--<button class="Devour" data-id="{{id}}" >
 
-</button>
+</button>-->
