--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,15 +1,49 @@
-<!DOCTYPE html> 
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="/public/assets/css/burger_style.css" type="text/css" />
-        <title>Eat the Burger!</title>
-        <script src="https://code.jquery.com/jquery.js"></script>
-        <script src="/public/assets/js/burger.js"</script>
-    </head>
+<div class="container-fluid">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+<link rel="stylesheet" href="assets/css/burger_style.css" type="text/css" />
+<title>Eat the Burger!</title>
+<h1>Burgers You Love!</h1><br>
+<img src="assets/img/burger2.jpg" width="600" height="400" id="img"><br><br>
+
+</div>
+
+<div class="row" id="burgerList">
+<h2>Burger List</h2>
+
+    <div class="col">
+<ul>
+    {{#each burgers}}
+    {{#unless devoured}}
+    {{> burgers/burger-block}}
+    {{/unless}}
+    {{/each}}
+</ul>
+</div>
+
+<h2>Devoured Burgers</h2>
+<div class="col">
+<table class="burgerD">
+    {{#each burgers}}
+    {{#if devoured}}
+    {{> burgers/burger-devour-block}}
+    {{/if}}
+    {{/each}}
+    </table>
+</div>
+</div>
+
+<div class="newBur">
+<h4>Add a burger you want to eat and click the "Submit" button</h4> 
+<form class="create-form">
+    <div class="new-burger">
+        <input type="text" id="burger-text">
+        </div>
+         <button type="submit" class="btn btn-primary" id="submit-button">Submit</button>
+</form>
+
+    </div>
+
+    <div class="eat-burger">
+       <!-- <button type="button" id="devour">Devour It!</button>-->         
     
-<body> {{{ body }}}
-
-    </body>
-</html>
